# apto-api

./: CHECKLIST.md  README.md  TODOS.md  main.py  manage.py  pyproject.toml  pytest.ini
apartments/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apartments/migrations/: 0001_initial.py  0002_apartment_monthly_rent_currency_and_more.py  0003_staffmanagedapartments_tenantrentedapartments_and_more.py  0004_remove_tenantrentedapartments_apartment_and_more.py
apartments/tests/: conftest.py  factory.py  test_permissions.py
apto/: asgi.py  settings.py  urls.py  views.py  wsgi.py
users/: groups.py  models.py  serializers.py
users/management/commands/: setup_groups.py
users/tests/: factory.py
